# LoggiX

./: README.md  meson.build  org.failurepoint.loggix.json
.flatpak-builder/cache/refs/heads/x86_64-org.failurepoint.loggix.json/: init
.flatpak-builder/checksums/: x86_64-org.failurepoint.loggix.json
data/: meson.build  org.failurepoint.loggix.appdata.xml.in  org.failurepoint.loggix.desktop.in  org.failurepoint.loggix.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: loggix-44.gresource.xml  loggix-44.in  main.py  meson.build  window.py  window.ui
src/gtk/: help-overlay.ui
